[tool.poetry]
name = "wi-elections"
version = "0.1.0"
description = ""
authors = ["V David Zvenyach <dave@esq.io>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.2"
jupyterlab = "^1.1.4"
geopandas = "^0.6.1"
plotly = "^4.2.1"
matplotlib = "^3.1.1"
descartes = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
